2022-07-01 Unreleased version

  C++
  * cpp_generated_lib_linked support is removed in protoc
  * Reduced .pb.o object file size slightly by explicitly instantiating
    InternalMetadata templates in the runtime.
  * Add C++20 keywords guarded by PROTOBUF_FUTURE_CPP20_KEYWORDS
  * Fixed crash in ThreadLocalStorage for pre-C++17 compilers on 32-bit ARM.
  * Clarified that JSON API non-OK statuses are not a stable API.
  * Added a default implementation of MessageDifferencer::Reporter methods.
  * proto2::MapPair is now an alias to std::pair.
  * Hide C++ RepeatedField::UnsafeArenaSwap
  * Use table-driven parser for reflection based objects.

  Kotlin
  * Suppress deprecation warnings in Kotlin generated code.
  * Kotlin generated code comments now use kdoc format instead of javadoc.
  * Escape keywords in package names in proto generated code
  * Add Kotlin enum int value getters and setters

  Java
  * Performance improvement for repeated use of FieldMaskUtil#merge by caching
    constructed FieldMaskTrees.
  * Optimized Java proto serialization gencode for protos having many extension ranges with few fields in between.

  Python
  * Changes ordering of printed fields in .pyi files from lexicographic to the same ordering found in the proto descriptor.

  Compiler
  * Print full path name of source .proto file on error

2022-08-09 version 21.5 (C++/Java/Python/PHP/Objective-C/C#/Ruby)

  PHP
  * Added getContainingOneof and getRealContainingOneof to descriptor.
  * fix PHP readonly legacy files for nested messages

  Python
  * Fixed comparison of maps in Python.

2022-07-25 version 21.4 (C++/Java/Python/PHP/Objective-C/C#/Ruby)

  C++
  * Reduce the required alignment of ArenaString from 8 to 4 (#10298)


2022-07-19 version 21.3 (C++/Java/Python/PHP/Objective-C/C#/Ruby)
  C++
  * Add header search paths to Protobuf-C++.podspec (#10024)
  * Fixed Visual Studio constinit errors (#10232)